# LearningCMake

./: CMakeLists.txt  main.cpp
MathLib/: CMakeLists.txt
MathLib/include/MathLib/: Addition.h
MathLib/src/: Division.cpp
PrintLib/: CMakeLists.txt
PrintLib/include/PrintLib/: PrintResult.h
cmake/: FindMathLib.cmake  FindPrintLib.cmake
libs/: CMakeLists.txt
libs/MathLib/: CMakeLists.txt
libs/MathLib/include/MathLib/: Division.h
libs/MathLib/src/: Addition.cpp
libs/PrintLib/: CMakeLists.txt
libs/PrintLib/src/: PrintResult.cpp
